# wrap-genius

./: .gitignore  .travis.yml  README.md  README.rst  main.py  pyproject.toml  readme.md  requirements.txt  setup.py  sonar-project.properties  test.py  tmp.py
.github/workflows/: main.yml  master.yml  publish.yml
docs/: conf.py  index.rst
docs/_build/doctrees/: environment.pickle  index.doctree  readme.doctree
docs/_build/doctrees/source/: genius.classes.doctree  genius.doctree  modules.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  readme.html  search.html  searchindex.js
docs/_build/html/_modules/: index.html
docs/_build/html/_modules/genius/: api.html  exceptions.html  scrapper.html
docs/_build/html/_modules/genius/classes/: album.html  artist.html  commons.html  media.html  social_media.html  song.html  stats.html
docs/_build/html/_sources/: index.rst.txt
docs/_build/html/_sources/source/: genius.classes.rst.txt  modules.rst.txt
docs/_build/html/source/: genius.classes.html  genius.html  modules.html
docs/source/: genius.classes.rst  genius.rst
genius/: __init__.py  api.py  exceptions.py  scraper.py  scrapper.py
genius/classes/: __init__.py  album.py  artist.py  commons.py  media.py  social_media.py  song.py  stats.py
tests/: api.py  test_album.py  test_artist.py  test_genius.py  test_song.py
