[tool.poetry]
name = "wrap-genius"
description = "Python wrapper for api.genius.com"
documentation = "https://github.com/fedecalendino/wrap-genius/blob/main/README.md"
homepage = "https://github.com/fedecalendino/wrap-genius"
license = "MIT"
readme = "README.md"
version = "1.7.1"

authors = [
  "Fede Calendino <fede@calendino.com>",
]
classifiers = [
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
]
keywords = [
  "wrapper",
  "genius.com",
]
packages = [
  { include = "genius" },
]

[tool.poetry.dependencies]
python = "^3.8"
beautifulsoup4 = "^4.11.1"
requests = "^2.28.1"
Unidecode = "^1.3.4"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
coverage = "^6.4.1"
ddt = "^1.5.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
